k8s/templates/destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: greeter-dr
spec:
  host: greeter
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
